# retry-extended

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: build-main.yml  lint.yml  publish-release.yml  publish-testpypi.yml  python-app.yml  test.yml
retry/: __init__.py  api.py  compat.py
tests/: test_retry.py  test_retry_async.py
