[tool.poetry]
name = "retry-extended"
version = "0.1.0"
description = ""
authors = ["Strollby Developers <backend.developers@strollby.com>"]
readme = "README.md"
packages = [{include = "retry"}]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
